Format List options

--- a/index.html
+++ b/index.html
@@ -36,11 +36,39 @@
                 <p class="font-rubik-italic">Pick a subject to get started.</p>
             </div>
             <div class="wrapper-item">
-                <ul>
-                    <li><a href="#HTML">HMTL</a></li>
-                    <li><a href="#CSS">CSS</a></li>
-                    <li><a href="#javascript">Javascript</a></li>
-                    <li><a href="#accessibility">Accessibility</a></li>
+                <ul class="main-list">
+                    <li>
+                        <a class="icon-button" href="#HTML">
+                            <img 
+                                src="starter-code/assets/images/icon-html.svg"
+                                alt="html option">
+                            <p>HTML</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-button" href="#CSS">
+                            <img
+                                src="starter-code/assets/images/icon-css.svg"
+                                alt="css option">
+                            <p>CSS</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-button" href="#javascript">
+                            <img
+                                src="starter-code/assets/images/icon-js.svg"
+                                alt="JS option">
+                            <p>Javascript</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-button" href="#accessibility">
+                            <img
+                                src="starter-code/assets/images/icon-accessibility.svg"
+                                alt="Accessibility option">
+                            <p>Accessibility</p>        
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
