Create toggle button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
                 </p>
             </div>
             <div class="nav-item">
-                Nigth mode
+                <img src="starter-code/assets/images/icon-sun-dark.svg" alt="Sun icon">
+                <div class="toggle-container">
+                    <input type="checkbox" id="toggle" class="toggle-btn hidden" value="false">
+                    <label for="toggle" class="toggle-btn"></label>
+                </div>
+                
+                <img src="starter-code/assets/images/icon-moon-dark.svg" alt="Moon icon">
             </div>
         </div>
     </nav>
