--- a/index.html
+++ b/index.html
@@ -31,54 +31,7 @@
             </div>
         </div>
     </nav>
-    <div id="content" class="content">
-        <div class="wrapper">
-            <div class="wrapper-item">
-                <h1 class="title">
-                    Welcome to the
-                    <br>
-                    <span>Frontend Quiz!</span>
-                </h1>
-                <p class="font-rubik-italic">Pick a subject to get started.</p>
-            </div>
-            <div class="wrapper-item">
-                <ul class="main-list">
-                    <li>
-                        <a class="icon-button" href="#HTML">
-                            <img 
-                                src="starter-code/assets/images/icon-html.svg"
-                                alt="html option">
-                            <p>HTML</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="icon-button" href="#CSS">
-                            <img
-                                src="starter-code/assets/images/icon-css.svg"
-                                alt="css option">
-                            <p>CSS</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="icon-button" href="#javascript">
-                            <img
-                                src="starter-code/assets/images/icon-js.svg"
-                                alt="JS option">
-                            <p>Javascript</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="icon-button" href="#accessibility">
-                            <img
-                                src="starter-code/assets/images/icon-accessibility.svg"
-                                alt="Accessibility option">
-                            <p>Accessibility</p>        
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <div id="content" class="content"></div>
     <script src="src/scripts/main.js"></script>
 </body>
 
